--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
   <artifactId>git-sparse-checkout-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
+  <name>git-checkout-plugin</name>
+  <description>A Maven plugin to perform a sparse checkout (fetch only a subtree) from a given Git repository</description>
+  <url>https://github.com/gastaldi/git-checkout-plugin</url>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
